--- a/style.css
+++ b/style.css
@@ -172,27 +172,7 @@
       opacity:.9;
     }
 
-    .footer {
-  margin-top: 60px;
-  padding: 20px 10px;
-  text-align: center;
-  font-size: 14px;
-  color: #aaa;
-  border-top: 1px solid rgba(255,255,255,0.1);
-}
+ 
 .footer {
-  width: 100%;
-  flex-basis: 100%;
-}
-.footer {
-  text-align: center;
-  padding: 16px;
-  margin-top: 40px;
-}
-
-@media (max-width: 768px) {
-  .footer {
-    font-size: 13px;
-    padding: 20px 10px;
-  }
+  opacity: 0.7;
 }
